tests/NormalTests/paczka1/small_fuzzy/54115985.err
Error in line 2: occC10Lfg A832 10,7
Error in line 3: occC10Lfg S172 78,6
Error in line 11: 10jYPZ A832 89,8
